...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Informasi tambahan'),
        leading: const BackButton(),
      ),
      body: Padding(
        padding: const EdgeInsets.all(20.0),
        child: SingleChildScrollView(
          child: Form(
...
                const Text(
                  'Mari mulai dengan menentukan target.',
                  style: TextStyle(fontSize: 16),
                ),
                const SizedBox(height: 10),
                DropdownButtonFormField<int>(
                  key: const Key('JenisDietDropdown'),
                  decoration: InputDecoration(
                    labelText: 'Pilih Jenis Diet',
                    labelStyle: const TextStyle(
                        color: Color.fromARGB(255, 68, 91, 75), fontSize: 12),
                    border: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(30),
...
                  },
                  validator: (value) =>
                      value == null ? 'Kategori diet tidak boleh kosong' : null,
                ),
                const SizedBox(height: 10),
                DropdownButtonFormField<String>(
                  key: const Key('JenisKelaminDropdown'),
                  decoration: InputDecoration(
                    labelText: 'Pilih Jenis Kelamin',
                    labelStyle: const TextStyle(
                        color: Color.fromARGB(255, 68, 91, 75), fontSize: 12),
                    border: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(30),
...
                      ? 'Riwayat medis tidak boleh kosong'
                      : null,
                ),
                // Next Button
                const SizedBox(height: 20),
                CustomButtonBorder(
                  label: 'Lanjut',
                  height: 45,
                  onPressed: _submitForm,
                ),
              ],
            ),
          ),
...
